Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-11515

Fix (and fork?) the shell policy restriction code that we got from Wine

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.15
    • Shell
    • None

    Description

      Fix (and possibly fork) the shell policy restriction code that we got from Wine.
      See SHRestricted and SHRestrictionLookup from Geoff Chappell for more details.

      Attachments

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              hbelusca hbelusca
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: